# wright-azure-vision-result

./: README.md  pyproject.toml  tox.ini
nassypy/: cli.py
tests/: test_sample.py
